import 'package:mqtt/mqtt.dart';

class IoService {
  final Client client;

  IoService(this.client);
}
