import 'package:mqtt/mqtt.dart';

class PasscodeService {
  final Client client;

  PasscodeService(this.client);
}
