@startuml classes
object MqttClient

'Service
class RtcService
class IoService 
class PasscodeService
class SignService
class EventService
class RegisterService
class DisplayService

'Blocs
class HomeViewBloc
class SignViewBloc
class PasscodeViewBloc

'Views
class HomeView
class SignView
class PasscodeView

'Repositories
class RegisterRepository
class SignRepository
class EventRepository

HomeView --> HomeViewBloc
HomeViewBloc --> DisplayService
HomeViewBloc --> IoService
SignView --> SignViewBloc
PasscodeView --> PasscodeViewBloc

SignViewBloc --> SignService
SignService --> SignRepository
PasscodeService --> MqttClient
PasscodeViewBloc --> PasscodeService
SignViewBloc --> EventService
EventService --> EventRepository
RegisterService --> RegisterRepository
RegisterService --> MqttClient
EventService --> MqttClient
RtcService --> MqttClient
IoService --> MqttClient
DisplayService --> MqttClient

@enduml